// E-Commerce Database Schema


Table brand {
  id int [pk, increment]
  name varchar
}

Table product_category {
  id int [pk, increment]
  name varchar
}

Table product {
  id int [pk, increment]
  name varchar
  brand_id int [ref: > brand.id]
  category_id int [ref: > product_category.id]
  base_price decimal
}

Table product_item {
  id int [pk, increment]
  product_id int [ref: > product.id]
  sku varchar
  stock int
  price decimal
}

Table product_image {
  id int [pk, increment]
  product_item_id int [ref: > product_item.id]
  url varchar
  alt_text varchar
}

Table color {
  id int [pk, increment]
  name varchar
  hex varchar
}

Table size_category {
  id int [pk, increment]
  name varchar
}

Table size_option {
  id int [pk, increment]
  size_category_id int [ref: > size_category.id]
  label varchar
}

Table product_variation {
  id int [pk, increment]
  product_item_id int [ref: > product_item.id]
  color_id int [ref: > color.id]
  size_option_id int [ref: > size_option.id]
}

Table attribute_category {
  id int [pk, increment]
  name varchar
}

Table attribute_type {
  id int [pk, increment]
  name varchar
  input_type varchar // text, number, boolean, etc.
}

Table product_attribute {
  id int [pk, increment]
  product_id int [ref: > product.id]
  attribute_category_id int [ref: > attribute_category.id]
  attribute_type_id int [ref: > attribute_type.id]
  value varchar
}

